<resources>
    <string name="app_name">Cafe Application</string>
    <string name="menu_text">МЕНЮ</string>
    <string name="profile_text">ПРОФИЛЬ</string>
    <string name="title_text">TITLE</string>
    <string name="volume_text">volume</string>
    <string name="ingridients_text">ingridients</string>
    <string name="plus_text">+</string>
    <string name="minus_text">-</string>
    <string name="count_text">1</string>
    <string name="price_text">price</string>
    <string name="order_text">ЗАКАЗАТЬ</string>
    <string name="choose_count_text">Выберите количество:</string>
    <string name="basket_text">КОРЗИНА</string>
    <string name="server_url">https://my-json-server.typicode.com/AliceDmitrieva/MyTestServer/db</string>
    <string name="initial_count_value">1</string>
    <string name="take_order_text">Ваш заказ принят!</string>
    <string name="volume_measure_text">грамм</string>
    <string name="profile_name_text">Имя:</string>
    <string name="profile_phone_text">Телефонный номер:</string>
    <string name="profile_email_text">Email:</string>
    <string name="profile_address_text">Адрес:</string>
    <string name="shop_cart_empty_text">КОРЗИНА ПУСТА</string>
    <string name="shop_cart_cost_text">ИТОГ</string>
    <string name="remove_text">УДАЛИТЬ</string>
</resources>
