<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="@dimen/product_detail_image_width"
        android:layout_height="@dimen/product_detail_image_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/product_detail_image_margin_top"
        app:srcCompat="@drawable/food_icon" />

    <TextView
        android:id="@+id/product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_image"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/title_text"
        android:textSize="@dimen/product_detail_title_text_size" />

    <TextView
        android:id="@+id/product_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_title"
        android:layout_marginStart="@dimen/product_detail_margin_start"
        android:layout_marginTop="@dimen/product_detail_margin_top"
        android:text="@string/volume_text"
        android:textSize="@dimen/volume_text_size" />

    <TextView
        android:id="@+id/product_volume_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_title"
        android:layout_marginStart="@dimen/product_detail_margin_start"
        android:layout_marginTop="@dimen/product_detail_margin_top"
        android:layout_toRightOf="@+id/product_volume"
        android:text="@string/volume_measure_text"
        android:textSize="@dimen/volume_text_size" />

    <TextView
        android:id="@+id/product_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_volume"
        android:layout_centerVertical="true"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="@dimen/product_detail_margin_start"
        android:layout_marginTop="@dimen/product_detail_margin_top"
        android:text="@string/ingridients_text"
        android:textSize="@dimen/ingredients_text_size" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_ingredients"
        android:layout_marginBottom="@dimen/product_detail_margin_bottom">

        <TextView
            android:id="@+id/choose_amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_minus"
            android:layout_marginStart="@dimen/product_detail_margin_start"
            android:text="@string/choose_count_text"
            android:textSize="@dimen/choose_count_text_size" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="@dimen/product_detail_count_button_width"
            android:layout_height="@dimen/product_detail_count_button_height"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/product_detail_margin_bottom"
            android:layout_marginStart="@dimen/product_detail_count_margin_start"
            android:background="@color/colorPrimary"
            android:text="@string/minus_text"
            android:textColor="@color/colorBottomNavigationActiveColored"
            android:textSize="@dimen/product_detail_button_text_size" />

        <TextView
            android:id="@+id/product_count"
            android:layout_width="@dimen/product_detail_count_width"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/product_detail_margin_bottom"
            android:layout_marginStart="@dimen/product_detail_count_margin_start"
            android:layout_toEndOf="@+id/button_minus"
            android:gravity="center"
            android:text="@string/initial_count_value"
            android:textSize="@dimen/product_detail_count_text_size" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="@dimen/product_detail_count_button_width"
            android:layout_height="@dimen/product_detail_count_button_height"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/product_detail_margin_bottom"
            android:layout_marginStart="@dimen/product_detail_button_plus_margin_start"
            android:layout_toEndOf="@+id/product_count"
            android:background="@color/colorPrimary"
            android:text="@string/plus_text"
            android:textColor="@color/colorBottomNavigationActiveColored"
            android:textSize="@dimen/product_detail_button_text_size" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="@dimen/product_detail_price_width"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/product_detail_margin_bottom"
            android:layout_marginStart="@dimen/product_detail_price_margin_start"
            android:layout_toEndOf="@+id/button_plus"
            android:layout_toStartOf="@+id/button_final_order"
            android:gravity="center"
            android:text="@string/price_text"
            android:textSize="@dimen/product_detail_price_size" />

        <Button
            android:id="@+id/button_final_order"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/product_detail_count_button_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/product_detail_margin_bottom"
            android:layout_marginEnd="@dimen/product_detail_order_button_margin_end"
            android:layout_marginStart="@dimen/product_detail_order_button_margin_start"
            android:background="@color/colorPrimary"
            android:text="@string/order_text"
            android:textColor="@color/colorBottomNavigationActiveColored"
            android:textSize="@dimen/product_detail_order_button_text_size" />

    </RelativeLayout>
</RelativeLayout>
