<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/selected_product"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="@dimen/shop_cart_product_image_width"
        android:layout_height="@dimen/shop_cart_product_image_height"
        android:layout_marginStart="@dimen/shop_cart_product_image_margin_start"
        android:layout_marginTop="@dimen/shop_cart_product_image_margin_top"
        android:src="@drawable/food_icon" />

    <TextView
        android:id="@+id/product_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/shop_cart_product_title_margin_start"
        android:layout_marginTop="@dimen/shop_cart_product_title_margin_top"
        android:layout_toEndOf="@+id/product_image"
        android:text="@string/title_text"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/shop_cart_product_title_text_size" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="@dimen/shop_cart_product_count_button_width"
        android:layout_height="@dimen/shop_cart_product_count_button_height"
        android:layout_below="@+id/product_title"
        android:layout_marginBottom="@dimen/shop_cart_product_count_button_margin_bottom"
        android:layout_marginStart="@dimen/shop_cart_product_count_button_margin_start"
        android:layout_marginTop="@dimen/shop_cart_product_count_button_margin_top"
        android:layout_toEndOf="@+id/product_image"
        android:background="@color/colorPrimary"
        android:text="@string/minus_text"
        android:textColor="@color/colorBottomNavigationActiveColored"
        android:textSize="@dimen/shop_cart_product_button_text_size" />

    <TextView
        android:id="@+id/selected_product_count"
        android:layout_width="@dimen/shop_cart_product_count_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_title"
        android:layout_marginStart="@dimen/shop_cart_product_count_margin_start"
        android:layout_marginTop="@dimen/shop_cart_product_count_margin_top"
        android:layout_toEndOf="@+id/button_minus"
        android:gravity="center"
        android:text="@string/initial_count_value"
        android:textSize="@dimen/shop_cart_product_count_text_size" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="@dimen/shop_cart_product_count_button_width"
        android:layout_height="@dimen/shop_cart_product_count_button_height"
        android:layout_below="@+id/product_title"
        android:layout_marginBottom="@dimen/shop_cart_product_count_button_margin_bottom"
        android:layout_marginStart="@dimen/shop_cart_product_count_button_margin_start"
        android:layout_marginTop="@dimen/shop_cart_product_count_button_margin_top"
        android:layout_toEndOf="@+id/selected_product_count"
        android:background="@color/colorPrimary"
        android:text="@string/plus_text"
        android:textColor="@color/colorBottomNavigationActiveColored"
        android:textSize="@dimen/shop_cart_product_button_text_size" />

    <TextView
        android:id="@+id/selected_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_minus"
        android:layout_marginStart="@dimen/shop_cart_product_price_margin_start"
        android:layout_marginTop="@dimen/shop_cart_product_price_margin_top"
        android:layout_toEndOf="@+id/product_image"
        android:text="@string/price_text"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/shop_cart_product_price_text_size" />

    <Button
        android:id="@+id/button_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selected_product_price"
        android:layout_marginStart="@dimen/shop_cart_product_remove_button_margin_start"
        android:layout_marginTop="@dimen/shop_cart_product_remove_button_margin_top"
        android:layout_toEndOf="@+id/product_image"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/remove_text"
        android:textColor="@android:color/background_light" />

</RelativeLayout>
