<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/content_product_margin_bottom"
    android:layout_marginLeft="@dimen/content_product_side_margin"
    android:layout_marginRight="@dimen/content_product_side_margin"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardElevation="@dimen/card_elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/card_view_image"
            android:layout_width="@dimen/content_product_image_width"
            android:layout_height="@dimen/content_product_image_height"
            android:layout_marginStart="@dimen/content_product_image_margin"
            android:layout_marginTop="@dimen/content_product_image_margin"
            android:src="@drawable/food_icon" />

        <TextView
            android:id="@+id/card_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/content_product_text_margin_left"
            android:layout_marginTop="@dimen/content_product_title_margin_top"
            android:textColor="@color/cardview_dark_background"
            android:text="@string/title_text"
            android:textSize="@dimen/content_product_text_size" />

        <TextView
            android:id="@+id/card_view_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/content_product_text_margin_left"
            android:layout_marginTop="@dimen/content_product_price_margin_top"
            android:textColor="@color/cardview_dark_background"
            android:text="@string/price_text"
            android:textSize="@dimen/content_product_text_size" />

        <Button
            android:id="@+id/card_view_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/content_product_text_margin_left"
            android:layout_marginTop="@dimen/content_product_button_margin_top"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/order_text"
            android:textColor="@android:color/background_light" />

    </RelativeLayout>
</android.support.v7.widget.CardView>
